# CPPStudy

./: .gitignore  CMakeLists.txt  README.md  main.cpp
0.数据类型/: 1.基本数据类型.cpp  2.类型转换.cpp  3.inline和define.cpp
1.数组/: 06.二维数组的定义.cpp  07.二维数组-数组名.cpp
10.STL/1.STL初识/: 2.vector存放自定义数据类型.cpp  4.STL案例-评委打分.cpp
10.STL/10.函数对象/: 1.函数对象使用.cpp  2.谓词.cpp  3.内建函数对象.cpp
10.STL/11.常用遍历算法/: 2.transform.cpp
10.STL/12.常用查找算法/: 1.find.cpp  2.find_if.cpp  3.adjacent_find.cpp  6.count_if.cpp
10.STL/13.常用排序算法/: 1.sort.cpp  2.random_shuffle.cpp  3.merge.cpp
10.STL/14.常用拷贝和替换算法/: 1.copy.cpp  2.replace.cpp  3.replace_if.cpp
10.STL/16.常用集合算法/: 1.set_intersection.cpp
10.STL/2.string容器/: 1.string构造函数.cpp  2.string赋值操作.cpp  4.string查找和替换.cpp  5.string字符串比较.cpp  6.string字符存取.cpp  7.string插入和删除.cpp
10.STL/3.vector容器/: 1.vector构造函数.cpp  4.vector插入和删除.cpp  5.vector数据存取.cpp
10.STL/4.deque容器/: 1.deque构造函数.cpp  3.deque大小操作.cpp
10.STL/6.queue容器/: 1.queue常用接口.cpp
10.STL/7.list容器/: 1.list构造函数.cpp  4.list插入删除.cpp  7.list排序案例.cpp
10.STL/8.set容器/: 2.set大小和交换.cpp  3.set插入删除.cpp  4.set查找和统计.cpp  5.set和multiset区别.cpp
10.STL/9.map容器/: 1.map构造和赋值.cpp  2.map大小和交换.cpp  4.map查找和统计.cpp
11.演讲比赛流程管理系统/: speaker.h  speechManager.cpp  speechManager.h  演讲比赛流程管理系统.cpp
12.机房预约系统/: computerRoom.h  globalFile.h  orderFile.cpp  orderFile.h  system_util.cpp  system_util.h  机房预约系统.cpp
13.异常处理/: 1.异常处理.cpp
14.c和cpp区别/: 1.c和cpp区别.cpp  2.const关键字.cpp
15.算法/: 1.LinkedList.hpp  10.RBTree.hpp  11.Huffman.cpp  2.sort.cpp  3.ArrayStack.hpp  4.LinkStack.hpp  5.汉诺塔.cpp  6.ArrayQueue.hpp  7.BST.hpp  8.PriorityQueue.hpp  9.AVL.hpp  ArrayUtil.cpp  algo.cpp
16.Linux/: dir.cpp  f_read_write.cpp  fork_test.cpp  mmap.cpp  mmap_ipc1.cpp  mmap_ipc2.cpp  pipe.cpp  thread1  thread1.cpp
17.Makefile用法/: Makefile  add.cpp  multi.cpp  sub.cpp  test.cpp
18.cmake1/: CMakeLists.txt  build.sh
18.cmake1/lib/: libmath.dylib
18.cmake1/src/: add.cpp  div.cpp  multi.cpp  sub.cpp
19.cmake2/: CMakeLists.txt  build.sh  hello.cpp
19.cmake2/include/: multi.h
2.函数/: 11.可变参数.cpp  8.函数占位参数.cpp  9.函数重载.cpp  swap.cpp
20.cmake3/: CMakeLists.txt  build.sh
3.指针/: 03.指针所占内存空间.cpp  04.空指针与野指针.cpp  05.const修饰指针.cpp  06.指针和数组.cpp  08.指针与函数与数组.cpp
4.结构体/: 01.结构体定义和使用.cpp  03.结构体指针.cpp  04.结构体做函数参数.cpp  05.结构体中const使用场景.cpp
5.内存四区/: 5.malloc_free_new_delete区别.cpp
6.引用/: 2.引用注意事项.cpp  3.引用做函数参数.cpp
8.文件操作/: 3.二进制文件-写文件.cpp  4.二进制文件-读文件.cpp
内存四区/: 3.堆区.cpp  4.new操作符.cpp
函数/: 10.函数重载注意事项.cpp  3.值传递.cpp  5.函数的声明.cpp  6.函数分文件编写.cpp  7.默认参数.cpp  swap.h  默认参数.cpp
引用/: 1.引用做函数参数.cpp  1.引用基本语法.cpp  2.引用做函数返回值.cpp  3.常量引用.cpp  3.引用做函数参数.cpp  6.常量引用.cpp
指针/: 02.指针的定义和使用.cpp  05.const修饰指针.cpp  06.指针和数组.cpp  07.指针与函数.cpp
数组/: 02.一维数组-数组名.cpp
文件操作/: 1.文本文件-写文件.cpp  2.文本文件-读文件.cpp
结构体/: 02.结构体数组.cpp  04.结构体做函数参数.cpp
(+111 files in other folders)
