cmake_minimum_required(VERSION 3.23)
project(CPPStudy)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPPStudy main.cpp 指针/05.const修饰指针.cpp 指针/06.指针和数组.cpp 指针/07.指针与函数.cpp 函数/默认参数.cpp
        引用/1.引用做函数参数.cpp 引用/2.引用做函数返回值.cpp 引用/3.常量引用.cpp 文件操作/1.文本文件-写文件.cpp 文件操作/2.文本文件-读文件.cpp 文件操作/3.二进制文件-写文件.cpp 文件操作/4.二进制文件-读文件.cpp
        模板/函数模板/1.函数模板语法.cpp 模板/函数模板/3.函数模板案例.cpp 模板/函数模板/4.普通函数与函数模板区别.cpp 模板/函数模板/5.普通函数和函数模板的调用规则.cpp 模板/函数模板/6.模板的局限性.cpp
        模板/类模板/1.类模板语法.cpp 模板/类模板/2.类模板与函数模板区别.cpp 模板/类模板/3.类模板中成员函数创建时机.cpp 模板/类模板/4.类模板对象做函数参数.cpp 模板/类模板/5.类模板与继承.cpp 模板/类模板/6.类模板成员函数类外实现.cpp 模板/类模板/7.类模板分文件编写问题及解决.cpp 模板/类模板/8.类模板与友元.cpp 模板/类模板/9.类模板案例.cpp
        类和对象/多态/1.多态基本概念.cpp 类和对象/多态/2.多态案例-计算器实现.cpp 类和对象/多态/3.纯虚函数和抽象类.cpp 类和对象/多态/4.多态案例2-制作饮品.cpp 类和对象/多态/5.虚析构和纯虚析构.cpp 类和对象/多态/6.多态案例3-电脑组装.cpp
        类和对象/继承/01.继承基础语法.cpp 类和对象/继承/03.继承中的对象模型.cpp 类和对象/继承/04.继承中构造和析构顺序.cpp 类和对象/继承/05.继承同名成员处理方式.cpp 类和对象/继承/06.继承同名静态成员处理方式.cpp 类和对象/继承/07.多继承语法.cpp 类和对象/继承/08.菱形继承.cpp
        类和对象/运算符重载/06.函数调用运算符重载.cpp
        结构体/01.结构体定义和使用.cpp 结构体/02.结构体数组.cpp 结构体/03.结构体指针.cpp 结构体/04.结构体做函数参数.cpp)


