cmake_minimum_required(VERSION 3.23)
project(CPPStudy)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CPPStudy 11.演讲比赛流程管理系统/演讲比赛流程管理系统.cpp 11.演讲比赛流程管理系统/speechManager.cpp 11.演讲比赛流程管理系统/speechManager.h 11.演讲比赛流程管理系统/speaker.h)

add_executable(CPPStudy 12.机房预约系统/机房预约系统.cpp 12.机房预约系统/identity/identity.h 12.机房预约系统/identity/student.cpp 12.机房预约系统/identity/student.h 12.机房预约系统/identity/teacher.cpp 12.机房预约系统/identity/teacher.h 12.机房预约系统/identity/manager.cpp 12.机房预约系统/identity/manager.h 12.机房预约系统/globalFile.h 12.机房预约系统/system_util.cpp 12.机房预约系统/system_util.h 12.机房预约系统/computerRoom.h 12.机房预约系统/orderFile.cpp 12.机房预约系统/orderFile.h)



